--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "Cara@2012",
+  "password": "Admin@123",
   "database": "postgres",
   "entities": [
       "./src/models/*.ts"
