--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   "scripts": {
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7"
   }
 }
